# hermes-torch

./: CHANGELOG.md  README.md  pyproject.toml
examples/: requirements.txt  torch.bat  torch.sh  torch.yml
examples/custom_model/: model.py  tcn_model_30fps.pth  tcn_model_60fps.pth  utils.py
src/hermes/torch/: __init__.py  data_container.py  handler.py  pipeline.py  stream.py  utils.py
torch_tcn/: ai_utils.py  model.py  requirements.txt
