[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pysio-hermes-torch"
version = "0.0.1"
requires-python = ">=3.7"
authors = [
  { name="Maxim Yudayev", email="maxim.yudayev@gmail.com" },
  { name="e-Media Research Lab @ KU Leuven", email="emedia@kuleuven.be" },
]
description = "A PyTorch processing support module for HERMES"
keywords = ["embedded ai", "wearables", "sensors", "closed-loop", "pytorch", "streaming", "realtime processing", "physiology"]
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Development Status :: 4 - Beta",
  "Intended Audience :: Healthcare Industry",
  "Intended Audience :: Education",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
  "Topic :: System :: Distributed Computing"
]
dependencies = [
  "pysio-hermes>=0.3.0",
  "torch"
]

[project.urls]
Homepage = "https://yudayev.com/hermes"
Documentation = "https://yudayev.com/hermes"
Repository = "https://github.com/maximyudayev/hermes-torch.git"
Issues = "https://github.com/maximyudayev/hermes/issues"
Changelog = "https://github.com/maximyudayev/hermes-torch/blob/main/CHANGELOG.md"
